# chess-engine

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
src/: CApplication.cpp  CApplication.h  CBoard.cpp  CBoard.h  CCommand.h  CCommandHelp.cpp  CCommandHelp.h  CCommandQuit.cpp  CCommandQuit.h  CCoord.h  CGame.cpp  CGame.h  CHashKey.cpp  CHashKey.h  CHistory.cpp  CHistory.h  CInterface.cpp  CInterface.h  CMove.cpp  CMove.h  CPiece.cpp  CPiece.h  CPlayer.cpp  CPlayer.h  EColor.cpp  EColor.h  EConst.h  EPiece.cpp  EPiece.h  ETile.cpp  ETile.h  FENTest.h  main.cpp
src/CCommands/: CCommandBoard.cpp  CCommandBoard.h  CCommandHelp.cpp  CCommandHelp.h  CCommandLoad.cpp  CCommandLoad.h  CCommandMove.cpp  CCommandMove.h  CCommandPlay.cpp  CCommandPlay.h  CCommandQuit.cpp  CCommandQuit.h  CCommandRestart.cpp  CCommandRestart.h  CCommandSave.cpp  CCommandSave.h
src/CPieces/: CBishop.cpp  CBishop.h  CEmpty.cpp  CEmpty.h  CKing.cpp  CKing.h  CKnight.cpp  CKnight.h  COffboard.cpp  COffboard.h  CPawn.cpp  CPawn.h  CQueen.cpp  CQueen.h  CRook.cpp  CRook.h
src/CPlayers/: CPlayerAI.cpp  CPlayerAI.h  CPlayerHuman.cpp  CPlayerHuman.h
test/: unittestCBoard.cpp
